# model-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
cloudflare/: worker.js
src/model_api/: config.py  dependencies.py  main.py  schemas.py
src/model_api/providers/: __init__.py  base.py  cloudflare.py  gemini.py  openai.py
src/model_api/routes/: chat.py  models.py
tests/: conftest.py  test_routes.py
